--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/teles/teste-disc/issues"
   },
-  "homepage": "https://github.com/teles/teste-disc#readme"
+  "homepage": "https://github.com/teles/teste-disc#readme",
+  "dependencies": {
+    "angular": "^1.6.5",
+    "angular-ui-router": "^1.0.3"
+  }
 }
