--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "angular-ui-router": "^1.0.3"
   },
   "devDependencies": {
-    "eslint": "^4.0.0-rc.0"
+    "connect": "^3.6.2",
+    "eslint": "^4.0.0-rc.0",
+    "serve-static": "^1.12.3"
   }
 }
