--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "angular-ui-router": "^1.0.3"
   },
   "devDependencies": {
+    "angular-mocks": "^1.6.5",
     "connect": "^3.6.2",
     "eslint": "^4.0.0-rc.0",
+    "jasmine": "^2.7.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
     "serve-static": "^1.12.3"
   }
 }
