--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "jasmine": "^2.7.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^0.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "serve-static": "^1.12.3"
   }
 }
