--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.6.5",
+    "codacy-coverage": "^2.0.2",
     "connect": "^3.6.2",
     "eslint": "^4.0.0-rc.0",
     "jasmine": "^2.7.0",
