--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "js/disc.js",
   "scripts": {
     "test": "node_modules/karma/bin/karma start",
-    "coverage": "cat coverage/lcov/lcov.info | ./node_modules/codacy-coverage/bin/codacy-coverage.js"
+    "coverage": "cat coverage/lcov/lcov.info | ./node_modules/codacy-coverage/bin/codacy-coverage.js",
+    "build": "node node_modules/browserify/bin/cmd.js ./src/js/disc.js -o bundle.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,9 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.6.5",
+    "browserify": "^14.4.0",
     "codacy-coverage": "^2.0.2",
+    "common.js": "^1.1.1",
     "connect": "^3.6.2",
     "eslint": "^4.0.0-rc.0",
     "jasmine": "^2.7.0",
