--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,26 +5,26 @@ rules:
     indent:
         - error
         - 4
-linebreak-style:
-    - error
-    - unix
-quotes:
-    - error
-    - double
-semi:
-    - error
-    - always
-eqeqeq:
-    - error
-    - always
-camelcase:
-    - error
-no-trailing-spaces:
-    - error
-curly:
-    - error
+    linebreak-style:
+        - error
+        - unix
+    quotes:
+        - error
+        - double
+    semi:
+        - error
+        - always
+    eqeqeq:
+        - error
+        - always
+    camelcase:
+        - error
+    no-trailing-spaces:
+        - error
+    curly:
+        - error
 globals:
-    angular: false
+    angular: 0
     module: false
     describe: false
     beforeEach: false
