--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node_modules/karma/bin/karma start",
     "coverage": "cat coverage/lcov/lcov.info | ./node_modules/codacy-coverage/bin/codacy-coverage.js",
-    "build": "node node_modules/browserify/bin/cmd.js ./src/js/disc.js -o bundle.js"
+    "build": "node node_modules/browserify/bin/cmd.js ./src/js/disc.js -o bundle.js",
+    "template-cache": "node node_modules/angular-template-cache/bin/cmd.js -f './src/**/*.template.html' -o ./src/js/templates/templates.run.js -s browserify --no-new-module -m disc.templates"
   },
   "repository": {
     "type": "git",
