sem-issue - corrige problemas de build
sem-issue - troca numero da porta servida pra um numero maior

[#20] - altera momento do npm install durante deploy

CLOSES #21 - adiciona badges de dependencias

[#20] - Remove trecho que nao sei como eh usado do .travis.yml

sem-issue - atualiza package.json (infos e @uirouter/angularjs)

[#20] - coloca "npm install" entre aspas no travis.yml

[#20] - Altera travis.yml

[#20] - altera versao do node

[#20] - Corrige nome dos comandos do npm pro travis

[#20] - altera require do ui-router

[#20] - altera forma de deletar bundle.js do gitignore

[#20] - altera abordagem do deploy

Delete angular.js

[#20] - Ajusta GH_REFERENCE

[#20] - Corrige typo

[#20] - adiciona um git status pra verificacao

[#20] - git status depois do commit

Atualizando gh-pages via travis-ci

[#20] -

sem-issue

sem-issue

teste

teste[2]

Delete bundle.js

sem-issue

sem-issue

sem-mensagem

sem-mensagem

sem-mensagem

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "teste-disc",
+  "name": "DISC",
   "version": "1.0.0",
   "description": "Teste de perfil comportamental DISC.",
-  "main": "js/disc.js",
+  "main": "src/js/disc.js",
   "scripts": {
     "test": "node_modules/karma/bin/karma start",
     "coverage": "cat coverage/lcov/lcov.info | ./node_modules/codacy-coverage/bin/codacy-coverage.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/teles/teste-disc.git"
+    "url": "git+https://github.com/teles/DISC.git"
   },
   "keywords": [
     "test",
@@ -28,10 +28,11 @@
   "homepage": "https://github.com/teles/teste-disc#readme",
   "dependencies": {
     "angular": "^1.6.5",
-    "angular-ui-router": "^1.0.3"
+    "@uirouter/angularjs": "^1.0.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.5",
+    "angular-template-cache": "^1.2.0",
     "browserify": "^14.4.0",
     "codacy-coverage": "^2.0.2",
     "common.js": "^1.1.1",
