--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
 language: node_js
+
 node_js:
-  - 5.0
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  on:
-    branch: master
+  - 7.0
 cache:
   directories:
     - node_modules
-install:
-  - npm install
-script:
-  - rm .gitignore
-  - npm run build
+
+before_script:
+  - git config --global user.name 'Travis-ci'
+  - git config --global user.email 'josetelesmaciel@gmail.com'
+
+script: bash ./deploy-to-gh-pages.sh
