--- a/package.json
+++ b/package.json
@@ -31,20 +31,19 @@
     "angular": "^1.6.5"
   },
   "devDependencies": {
-    "angular-mocks": "^1.6.5",
-    "angular-template-cache": "^1.2.0",
-    "browserify": "^14.4.0",
-    "codacy-coverage": "^2.0.2",
-    "common.js": "^1.1.1",
-    "connect": "^3.6.2",
-    "eslint": "^4.0.0-rc.0",
-    "gh-pages-travis": "^1.0.4",
-    "jasmine": "^2.7.0",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^0.1.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "serve-static": "^1.12.3"
+    "angular-mocks": "1.6.5",
+    "angular-template-cache": "1.2.0",
+    "browserify": "14.4.0",
+    "codacy-coverage": "2.0.2",
+    "common.js": "1.1.1",
+    "connect": "3.6.2",
+    "eslint": "4.0.0-rc.0",
+    "jasmine": "2.7.0",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "0.1.0",
+    "karma-phantomjs-launcher": "1.0.4",
+    "serve-static": "1.12.3"
   }
 }
