--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Teste de perfil comportamental DISC.",
   "main": "src/js/index.js",
   "scripts": {
+    "transpile": "babel src --out-dir transpiled",
     "single-test": "karma start --single-run --browsers PhantomJS",
     "test": "karma start --browsers PhantomJS",
     "coverage": "cat coverage/lcov/lcov.info | ./node_modules/codacy-coverage/bin/codacy-coverage.js",
-    "build": "browserify ./src/js/index.js -o bundle.js",
+    "build": "browserify ./transpiled/js/index.js -o bundle.js",
     "watch": "watchify ./src/js/index.js -o bundle.js",
     "template-cache": "node node_modules/angular-template-cache/bin/cmd.js -f './src/**/*.template.html' -o ./src/js/templates/templates.run.js -s browserify --no-new-module -m disc.templates"
   },
@@ -35,6 +36,9 @@
   "devDependencies": {
     "angular-mocks": "1.6.5",
     "angular-template-cache": "1.2.0",
+    "babel": "6.23.0",
+    "babel-cli": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
     "browserify": "14.4.0",
     "browserify-istanbul": "2.0.0",
     "codacy-coverage": "2.0.2",
