--- a/package.json
+++ b/package.json
@@ -9,6 +9,25 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
+  "test": "ava",
+  "ava": {
+    "files": [
+      "./src/**/**/*.specs.js"
+    ],
+    "source": [
+      "./src/**/*.{js}",
+      "!./src/**/*.specs.js"
+    ],
+    "concurrency": 5,
+    "failFast": true,
+    "failWithoutAssertions": false,
+    "tap": true,
+    "powerAssert": false,
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  },
   "dependencies": {
     "vue": "^2.5.11"
   },
@@ -18,6 +37,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "ava": "^0.25.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
