refactor(Squizze class): NO-ISSUE - adds more data to Squizze.results

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "2.5.11",
+    "vue-router": "3.0.1"
   },
   "browserslist": [
     "> 1%",
@@ -37,8 +38,8 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "ava": "^0.25.0",
-    "babel-core": "^6.26.0",
+    "ava": "0.25.0",
+    "babel-core": "6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
