--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "test": "ava"
+    "test": "ava",
+    "test-watch": "npm test -- --watch"
   },
   "ava": {
     "files": [
