--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "vue": "2.5.11",
+    "vue": "^2.5.16",
     "vue-router": "3.0.1",
     "vuex": "^3.0.1"
   },
@@ -42,17 +42,17 @@
   "devDependencies": {
     "ava": "0.25.0",
     "babel-core": "6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-stage-3": "6.24.1",
+    "cross-env": "5.0.5",
+    "css-loader": "0.28.7",
+    "file-loader": "1.1.4",
+    "node-sass": "4.5.3",
+    "sass-loader": "6.0.6",
+    "vue-loader": "13.0.5",
+    "vue-template-compiler": "2.5.16",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.9.1"
   }
 }
