#32 - sets noprompt option to true for gh-pages-deploy

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "gh-pages-deploy": {
     "staticpath": "dist",
-    "prep": ["build"]
+    "prep": ["build"],
+    "noprompt": true
   },
   "ava": {
     "files": [
