--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "0.28.7",
     "file-loader": "1.1.4",
     "gh-pages-deploy": "0.5.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "4.5.3",
     "sass-loader": "6.0.6",
     "vue-loader": "13.0.5",
